# NIFTI_Tag

./: CLAUDE.md  CMakeLists.txt  README.md
.cursor/rules/: build.mdc
api/: NiftiVisualizationAPI.h
example/: mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/: MultiResolutionNiftiProcessor.h  NiftiVisualizationAPI.cpp  brainregionvolume.cpp  brainregionvolume.h  niftimanager.cpp  niftimanager.h
src/: main.cpp
